--- a/style.css
+++ b/style.css
@@ -534,6 +534,7 @@ footer a:hover {
     }
 }
 #bur{
+    border-radius: 30px;
     display: block;
     text-align: center;
     background-color: #0a2e4c;
