--- a/midia.css
+++ b/midia.css
@@ -1,11 +1,52 @@
 @charset "UTF-8";
 
+/* Em telas maiores, mostra o menu tradicional e esconde o botão hamburguer */
 @media screen and (min-width: 768px) {
-    #bur{
+    #bur {
         display: none;
     }
-    menu{
-        display: block;
+
+    menu {
+        display: block !important;
     }
-    
+}
+
+/* Em telas menores, menu colapsado */
+@media screen and (max-width: 767px) {
+    nav {
+        flex-wrap: wrap;
+    }
+
+    menu {
+        width: 100%;
+        margin-top: 0.5rem;
+    }
+
+    menu ul {
+        flex-direction: column;
+        align-items: stretch;
+        border-top: 1px solid #ddd;
+        padding-top: 0.5rem;
+    }
+
+    menu ul li {
+        width: 100%;
+        text-align: center;
+        border-bottom: 1px solid #eee;
+    }
+
+    menu ul li:last-child {
+        border-bottom: none;
+    }
+
+    menu ul li a {
+        display: block;
+        padding: 0.7rem 0;
+    }
+
+    #bur {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
